--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,5 @@ requests==2.32.3
 python-dateutil==2.9.0.post0
 streamlit-folium==0.21.0
 folium==0.16.0
+chardet==5.2.0
 google-generativeai==0.8.2   # 任意（Gemini 2.5 Flash を使う場合）
