--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ python-dateutil==2.9.0.post0
 streamlit-folium==0.21.0
 folium==0.16.0
 chardet==5.2.0
-google-generativeai==0.8.2
+google-generativeai==0.8.2   # 任意（Geminiを使う場合）
 protobuf>=4.25.3
 grpcio>=1.62.1
 typing-extensions>=4.12.2
